--- a/client/src/components/Home/Category/Category.css
+++ b/client/src/components/Home/Category/Category.css
@@ -5,9 +5,9 @@
 
 .category .category-heading{
     text-align: center;
-    font-size: 50px;
-    font-weight: 600;
-    margin-bottom: 10vh;
+    font-size: 45px;
+    font-weight: bold;
+    margin-bottom: 9vh;
 }
 
 .category .category-card{
@@ -50,10 +50,10 @@
     margin-right: auto;
     text-align: center;
     width: 140px;
-    background-color: #13bd5d;
-    border: 0px solid #000;
+    background-color: white;
+    border: 1px solid #259455;
     border-radius: 15px;
-    color: #fff;
+    color: black;
     font-size: 22px;
     font-weight: 500;
     padding: 8px;
