--- a/client/src/components/Home/Number/Number.css
+++ b/client/src/components/Home/Number/Number.css
@@ -1,6 +1,8 @@
 .numbers{
     padding-top: 10vh;
-    background-color: #ecfdec;
+    background-color: white;
+    border-top: 1px solid #259455;
+    border-bottom: 1px solid #259455;
     padding-bottom: 10vh;
     /* margin-bottom: 10vh; */
     text-align: center;
@@ -9,11 +11,11 @@
 .numbers .number-icon{
     height: 80px;
     padding: 10px;
-    color: #0d056c;
+    color: #259455;
 }
 
 .numbers .number-text{
     font-size: 26px;
     font-weight: 500;
-    color: #0d056c;
+    color: #259455;
 }
