--- a/client/src/components/Compete/Compete.css
+++ b/client/src/components/Compete/Compete.css
@@ -16,3 +16,26 @@
     margin-bottom: 2vh;
     border-bottom-color: #0f994b;
 }
+
+.compete .nav .nav-item button{
+    color: #1f1f1f;
+    font-weight: 600;
+    font-size: 18px;
+    font-family: 'Source Sans Pro', sans-serif;
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+}
+
+.compete .nav .nav-item button:hover{
+    border-bottom-color: #1ae792;
+}
+
+.compete .nav .nav-item .active{
+    background-color: #1ae792;
+    color: #000000;
+    border-bottom-color: #1ae792;
+}
+
+.compete .tab-content{
+    margin-bottom: 10vh;
+}
