:art: user friendly footer and tracks designed

--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 .footer{
     padding-top: 5vh;
-    background-color: #ecfdec;
+    background-color: #d5f7d5;
     /* set footer to bottom */
     position: relative;
     bottom: 0;
