--- a/client/src/components/TrackHome/TrackHome.css
+++ b/client/src/components/TrackHome/TrackHome.css
@@ -18,6 +18,38 @@
     text-align: center;
 }
 
+.main-track .card-course{
+    width: 26rem;
+    margin-bottom: 3rem;
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.35);   
+    cursor: pointer;
+    border-radius: 12px;
+    transition: transform 0.3s;
+}
+
+.main-track .card-course:hover{
+    box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.35);   
+    transform: translateY(-0.5rem);
+}
+
+.main-track .card-course .card-img{
+    width: 100%;
+    height: 15rem;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+.main-track .card-course .card-title{
+    color: #13c560;
+    font-family: 'Roboto Slab', serif;
+    font-size: 1.8rem;
+}
+
+.main-track .card-course .card-text{
+    margin-top: 2.5vh;
+    font-family: 'Source Sans Pro', sans-serif;
+    font-size: 1.1rem;
+}
 
 .main-track .card-course button{
     margin-top: 2.5vh;
