--- a/client/src/components/UserHome/UserHome.css
+++ b/client/src/components/UserHome/UserHome.css
@@ -2,7 +2,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap');
 
 .user-home{
-    margin-top: 2vh;
+    margin-top: 5vh;
+    margin-left: 20vh;
+    margin-bottom: 20vh;
 }
 
 .user-home .sub-head{
