--- a/client/src/components/Tracks/Tracks.css
+++ b/client/src/components/Tracks/Tracks.css
@@ -25,14 +25,14 @@
     box-shadow: 0px 0px 2px 0px #13bd5d;   
     cursor: pointer;
     border-radius: 12px;
-    background-color: #ecfdec;
+    background-color: #fafafa;
     transition: transform 0.3s;
     align-items: center;
 }
 
 .tracks .tracks-card .card:hover{
-    box-shadow: 0px 0px 10px #13bd5d;
-    transform: scale(1.07);
+    box-shadow: 0px 0px 2px 0px #13bd5d; 
+    transform: translateY(-0.5rem);
 }
 
 .tracks .tracks-card .card .card-img-top{
