--- a/client/src/components/UserNavBar/UserNavBar.css
+++ b/client/src/components/UserNavBar/UserNavBar.css
@@ -4,7 +4,12 @@
   left: 0;
   z-index: 1030;
   background-color: white;
-  box-shadow: 0px 6px 5px -6px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 2px 0 rgba(0,0,0,.05);
+}
+
+.nav-logo{
+  width: 130px;
+  height: 60px;
 }
 .search-icon {
   padding-top: 4px;
