--- a/client/src/components/Admin/Admin.css
+++ b/client/src/components/Admin/Admin.css
@@ -1,12 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');
 
-.login .login-heading h1{
-    margin-top: 3rem;
-    margin-bottom: 3rem;
-    color: #13c560;
-    text-align: center;
-    font-family: 'Roboto Slab', serif;
-    font-size: 3rem;
+.login-container{
+    margin-top: -3vh;
 }
 
 .login .card-login{
